wip: question index

--- a/src/GBProd/ICantDecide/Infrastructure/Resources/config/doctrine/Question.orm.yml
+++ b/src/GBProd/ICantDecide/Infrastructure/Resources/config/doctrine/Question.orm.yml
@@ -1,9 +1,9 @@
 GBProd\ICantDecide\CoreDomain\Question\Question:
     type: entity
     table: question
-    id:
+    embedded:
         id:
-            type: QuestionIdentifier
+            class: GBProd\ICantDecide\CoreDomain\Question\QuestionIdentifier
     fields:
         text:
             type: text
