--- a/src/GBProd/ICantDecide/UI/Resources/config/services.yml
+++ b/src/GBProd/ICantDecide/UI/Resources/config/services.yml
@@ -3,4 +3,4 @@ services:
         class: GBProd\ICantDecide\UI\Controller\QuestionController
         arguments:
             - '@tactician.commandbus'
-        
+            - '@templating'
