feat; Question index

--- a/src/GBProd/ICantDecide/Infrastructure/Resources/config/doctrine/QuestionIdentifier.orm.yml
+++ b/src/GBProd/ICantDecide/Infrastructure/Resources/config/doctrine/QuestionIdentifier.orm.yml
@@ -2,5 +2,4 @@ GBProd\ICantDecide\CoreDomain\Question\QuestionIdentifier:
     type: embeddable
     id:
         value:
-            type: string
-            length: 36
+            type: uuid
