--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,9 @@
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "^2.0",
         "league/tactician-bundle": "^0.4.0",
-        "doctrine/doctrine-fixtures-bundle": "^2.3"
+        "doctrine/doctrine-fixtures-bundle": "^2.3",
+        "ramsey/uuid": "^3.2",
+        "ramsey/uuid-doctrine": "^1.1"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
