--- a/src/GBProd/ICantDecide/Application/Resources/config/services.yml
+++ b/src/GBProd/ICantDecide/Application/Resources/config/services.yml
@@ -4,7 +4,6 @@ services:
         arguments:
             - "@doctrine.orm.entity_manager"
         
-    
     icantdecide_app.available_question_handler:
         class: GBProd\ICantDecide\Application\Handler\AvailableQuestionsHandler
         arguments:
@@ -13,3 +12,12 @@ services:
             -  
                 name: tactician.handler
                 command: GBProd\ICantDecide\Application\Query\AvailableQuestionsQuery
+                
+    icantdecide_app.ask_question_handler:
+        class: GBProd\ICantDecide\Application\Handler\AskQuestionsHandler
+        arguments:
+            - "@icantdecide_app.question_repository"
+        tags:
+            -  
+                name: tactician.handler
+                command: GBProd\ICantDecide\Application\Query\AskQuestionCommand
