--- a/src/GBProd/ICantDecide/UI/Resources/config/routing.yml
+++ b/src/GBProd/ICantDecide/UI/Resources/config/routing.yml
@@ -1,3 +1,7 @@
 question_index:
     path: /
     defaults:  { _controller: icantdecide.question_controller:index }
+    
+question_ask:
+    path: /ask
+    defaults:  { _controller: icantdecide.question_controller:ask }
