feat; end date on questions

--- a/src/GBProd/ICantDecide/Application/Resources/config/validation.yml
+++ b/src/GBProd/ICantDecide/Application/Resources/config/validation.yml
@@ -2,3 +2,7 @@ GBProd\ICantDecide\Application\Command\AskQuestionCommand:
     properties:
         text:
             - NotBlank: ~
+        endDate:
+            - NotBlank: ~
+            - GreaterThan: now
+            - DateTime: ~
