--- a/src/GBProd/ICantDecide/Infrastructure/Resources/config/doctrine/Question.orm.yml
+++ b/src/GBProd/ICantDecide/Infrastructure/Resources/config/doctrine/Question.orm.yml
@@ -7,3 +7,5 @@ GBProd\ICantDecide\CoreDomain\Question\Question:
     fields:
         text:
             type: text
+        endDate:
+            type: datetime
