--- a/.travis.yml
+++ b/.travis.yml
@@ -2,15 +2,14 @@ language: php
 php:
   - '5.6'
   - '7.0'
-  
+
 before_script:
     - composer self-update
     - composer install --no-interaction --prefer-source --dev
-    - mkdir -p build/logs
 
-script: 
-    - vendor/bin/phpunit --coverage-text --coverage-clover build/logs/clover.xml
-    
+script:
+    - vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover
+
 after_success:
-    - travis_retry php vendor/bin/coveralls -v
-  
+    - wget https://scrutinizer-ci.com/ocular.phar
+    - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
