Using ES datastore for index

--- a/src/GBProd/ICantDecide/Application/Resources/config/services.yml
+++ b/src/GBProd/ICantDecide/Application/Resources/config/services.yml
@@ -12,7 +12,7 @@ services:
     icantdecide_app.available_question_handler:
         class: GBProd\ICantDecide\Application\Handler\AvailableQuestionsHandler
         arguments:
-            - "@icantdecide_app.question_repository"
+            - "@icantdecide_app.question_view.data_store"
         tags:
             -
                 name: tactician.handler
@@ -34,3 +34,24 @@ services:
             -
                 name: doctrine.expression_builder
                 specification: GBProd\ICantDecide\CoreDomain\Specification\Question\IsAvailable
+
+    icantdecide_app.question_view.data_store:
+        class: GBProd\ICantDecide\Infrastructure\ReadModel\QuestionView\DataStore
+        arguments:
+            - "@fos_elastica.index.app.question_view"
+            - "@serializer"
+
+    icantdecide_app.question_view.projector:
+        class: GBProd\ICantDecide\Infrastructure\ReadModel\QuestionView\Projector
+        arguments:
+            - "@icantdecide_app.question_view.data_store"
+        tags:
+            - { name: kernel.event_listener, event: Question.QuestionAsked, method: 'onQuestionAsked' }
+
+    icantdecide_app.question_view.user:
+        class: GBProd\ICantDecide\Infrastructure\ReadModel\QuestionView\Provider
+        arguments:
+            - "@icantdecide_app.question_view.data_store"
+            - "@icantdecide_app.question_repository"
+        tags:
+            - { name: fos_elastica.provider, index: app, type: question_view }
