--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,10 @@
         "doctrine/doctrine-fixtures-bundle": "^2.3",
         "ramsey/uuid": "^3.2",
         "ramsey/uuid-doctrine": "^1.1",
-        "gbprod/doctrine-specification-bundle": "v0.0.*@alpha",
-        "gbprod/domain-event-bundle": "^0.1.0@alpha"
+        "gbprod/doctrine-specification-bundle": "^0.1",
+        "gbprod/domain-event-bundle": "^0.1",
+        "friendsofsymfony/elastica-bundle": "dev-master",
+        "gbprod/uuid-normalizer": "^1.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
