moving to elastic search official php client

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -77,3 +77,9 @@ m6web_elasticsearch:
         views:
             hosts:
                 - '%elasticsearch_host%:%elasticsearch_port%'
+                
+elasticsearch_extra:
+    clients:
+        views:
+            indices:
+                question_view: ~
