--- a/src/GBProd/ICantDecide/Infrastructure/Resources/config/doctrine/Question.orm.yml
+++ b/src/GBProd/ICantDecide/Infrastructure/Resources/config/doctrine/Question.orm.yml
@@ -9,3 +9,6 @@ GBProd\ICantDecide\CoreDomain\Question\Question:
             type: text
         endDate:
             type: datetime
+    embedMany:
+        options:
+            targetDocument: GBProd\ICantDecide\CoreDomain\Question\Option
