--- a/src/GBProd/ICantDecide/Infrastructure/Resources/config/doctrine/Option.orm.yml
+++ b/src/GBProd/ICantDecide/Infrastructure/Resources/config/doctrine/Option.orm.yml
@@ -1,5 +1,6 @@
 GBProd\ICantDecide\CoreDomain\Question\Option:
     type: entity
+    table: question_option
     embedded:
         id:
             class: GBProd\ICantDecide\CoreDomain\Question\OptionIdentifier
