fix database schema

--- a/src/GBProd/ICantDecide/Infrastructure/Resources/config/doctrine/Option.orm.yml
+++ b/src/GBProd/ICantDecide/Infrastructure/Resources/config/doctrine/Option.orm.yml
@@ -7,3 +7,5 @@ GBProd\ICantDecide\CoreDomain\Question\Option:
     fields:
         text:
             type: text
+        position:
+            type: integer
